src/index.css
#root {
	width: 100%;
	height: 100%;
}

pre {
	margin-top: 2rem;
	margin-bottom: 2rem;
}

a {
	color: #84bef0;
}

p {
	filter: opacity(0.9);
	line-height: 1.75rem;
	margin-top: 2rem;
	font-weight: 400;
}

li {
	font-weight: 400;
}

h1, h2, h3, h4, h5, h6 {
	margin-top: 2rem;
	margin-bottom: 0;
}

#end {
	height: 1px;
}

html {
	width: 100%;
	height: 100%;
}

body {
	margin: 0;
	background-color: #191919;
	color: #FFFFFF;
	font-family: 'Inter', sans-serif;
	font-weight: 600;
	width: 100%;
	height: 100%;
}

* {
	-webkit-user-select: initial;
	-moz-user-select: initial;
	-ms-user-select: initial;
	user-select: initial;
	scrollbar-width: thin;
}

*::-webkit-scrollbar {
	width: 8px;
}

*::-webkit-scrollbar-thumb {
	background-color: rgba(242, 242, 242, 0.1);
}

code {
	background-color: #1D1F21;
	padding: 0.25rem;
	border-radius: 0.25rem;
}

.math-inline {
	padding: 0.25rem;
	border-radius: 0.25rem;
}

.math-display {
	background-color: #1D1F21;
	padding: 1rem;
	border-radius: 0.25rem;
	margin-top: 2rem;
	margin-bottom: 2rem;
}

